<resources>
    <string name="app_name">IcelandicTutor</string>
    <string name="title_activity_game" />
    <string name="play_a_game">Quiz me</string>
    <string name="title_select_category">Game - Select category</string>
    <string name="title_select_level">Game - Select level</string>
    <string name="learn_some_words_in_the_dictionary">Check out the dictionary</string>
    <string name="check_your_score">Check your score</string>
    <string name="play_a_game_based_on_your_location">Play a game based on your location</string>
    <string name="create_your_own_flashcards">Create your own flashcards</string>
    <string name="read_articles_to_expand_your_vocabulary">Read articles to expand your vocabulary</string>
    <string name="animals">Animals</string>
    <string name="store">Store</string>
    <string name="clothes">Clothes</string>
    <string name="home">home</string>
    <string name="welcome_to_the_dictionary">Welcome to the dictionary!</string>
    <string name="please_select_a_category_below_to_view_vocabulary">Please select a category below to view vocabulary</string>
    <string name="welcome_to_the_game">Welcome to the Game!</string>
    <string name="please_select_a_category_you_want_to_play_a_game_in">Please select a category</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="you_have_selected_the_category">You have selected the category:</string>
    <string name="please_select_a_level_you_want_to_play_a_game_in">Please select a level</string>
    <string name="next_question">Next question</string>
    <string name="select_the_correct_translation">Select the correct answer</string>
    <string name="congratulations_you_just_finished_the_game">Congratulations, you just finished the level!</string>
    <string name="level3">Level 3</string>

    <string name="channel_name">nerdAlert</string>
    <string name="channel_description">notification channel</string>

    <string name="create_a_new_flashcard">Create a new flashcard</string>
    <string name="create_your_own_flashcard">Create your own flashcard</string>
    <string name="learn_icelandic_with_your_own_flashcards">Learn Icelandic with your own flashcards</string>
    <string name="turn">Turn</string>
    <string name="delete">Delete</string>
    <string name="textview">TextView</string>
    <string name="write_what_you_want_to_have_at_the_front_of_the_flashcard">Write the Icelandic word on the front of the flashcard</string>
    <string name="write_what_you_want_to_have_at_the_back_of_the_flashcard">Write the English word on the back of the flashcard</string>
    <string name="add_to_flashcards">Add to flashcards</string>
    <string name="back_to_view_all_flashcards">Back to view all flashcards</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="next_flashcard">Next flashcard</string>
    <string name="welcome_to_the_icelandic_tutor">Welcome to the Icelandic Tutor</string>
    <string name="quiz">Take a Quiz</string>
    <string name="check_out_the_dictionary">Check out the dictionary</string>
    <string name="check_you_score">Check your score:</string>
    <string name="go_to_scoreboard">Go to Scoreboard</string>
    <string name="study_the_dictionary">Check out the dictionary:</string>
    <string name="go_to_the_dictionary">Go to the dictionary</string>
    <string name="articles">Articles</string>
    <string name="please_select_an_article_below">Please select an article below</string>
    <string name="theater_under_arnarh_oll">Theater under Arnarhóll</string>
    <string name="hildur_wins_oscar_for_score_to_joker">Hildur wins Oscar for score to Joker</string>
    <string name="website_makes_visiting_reykjavik_easy">Website makes visiting Reykjavik easy</string>

</resources>
