<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/gotogame"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="game"
            android:text="@string/play_a_game" />

        <Button
            android:id="@+id/gotodictionary"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/learn_some_words_in_the_dictionary" />

        <Button
            android:id="@+id/gotoscore"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/check_your_score" />

        <Button
            android:id="@+id/gotolocation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="location"
            android:text="@string/play_a_game_based_on_your_location" />

        <Button
            android:id="@+id/gotoflashcards"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="flashcard"
            android:text="@string/create_your_own_flashcards" />

        <Button
            android:id="@+id/gotoarticles"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="article"
            android:text="@string/read_articles_to_expand_your_vocabulary" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>