<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamecategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/category1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="category"
            android:text="@string/animals" />

        <Button
            android:id="@+id/category2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="category"
            android:text="@string/store" />

        <Button
            android:id="@+id/category3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="category"
            android:text="@string/clothes" />

        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="home"
            android:text="@string/home" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>