<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishedgameActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/dictionarySelection_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulations_you_just_finished_the_game"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userScoreText"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_you_score"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/scoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_to_scoreboard" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/study_the_dictionary"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/dictButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_to_the_dictionary" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>