<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFlashcardActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearFlashcard">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/create_a_new_flashcard"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="102dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/write_what_you_want_to_have_at_the_front_of_the_flashcard"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:id="@+id/frontCard"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_what_you_want_to_have_at_the_back_of_the_flashcard"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:id="@+id/backCard"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="145dp" />

        <Button
            android:id="@+id/addNewFlashcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_flashcards" />

    </LinearLayout>

    <Button
        android:id="@+id/backToAllFlashcards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_view_all_flashcards"
        app:layout_constraintBottom_toBottomOf="@+id/linearFlashcard" />
</androidx.constraintlayout.widget.ConstraintLayout>