<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashcardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleFlashcard"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/create_a_new_flashcard"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="410dp">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/card_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/card_back" />


                </FrameLayout>

                <FrameLayout
                    android:id="@+id/card_front"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <include
                        layout="@layout/card_front"
                        android:layout_height="459dp"
                        tools:ignore="IncludeLayoutParam" />

                </FrameLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn"
            android:onClick="flipCard"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/newFlashcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_flashcard" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>