<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/dictionarySelection_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <TextView
                android:id="@+id/questionNumber"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_the_correct_translation"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="118dp">

                <TextView
                    android:id="@+id/word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:adjustViewBounds ="true"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="67dp" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="27sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/card"
        />
</androidx.constraintlayout.widget.ConstraintLayout>